# showscore

./: .gitignore  MANIFEST.in  README.md  neon-fugue.py  pyproject.toml  run_tests_with_ipython_versions.sh  tox.ini  vulfpeck-demo.py
.github/workflows/: publish.yml
showscore/: __init__.py  html_renderer.py  music21_converter.py  opensheetmusicdisplay.min.js  show.py  showscore.js  utils.py
showscore/converter/: __init__.py  to_xml.py
showscore/renderer/: __init__.py  display.py  opensheetmusicdisplay.1.9.0.min.js  showscore.js
tests/: test_html_renderer.py  test_music21_converter.py  test_show.py  test_showxml.py  test_utils.py
